web/public/css/user.css
.help_msgs,
.button,
.signup_submit,
select,
input {
  width: 60%;
}

.login,
.signup {
  display: grid;

  grid-auto-rows: minmax(65px, auto);

  margin-bottom: 0;
  grid-template-columns: 7% 13% [content] auto 13% 7%;
}

.login_box,
.signup_box {
  grid-column: content;
  display: grid;

  grid-template-columns: auto;
  grid-auto-rows: minmax(50px, auto);
}

.login_options {
  display: grid;

  margin: 15px 0 15px 0;
}

.login_type {
  grid-column: content;
  font-size: x-large;
}

.login_label,
.signup_label {
  display: inline-block;
  padding-top: 20px;
  -webkit-padding-before: 2.5%;
}

.signup_submit,
.login_submit {
  display: grid;
  justify-content: center;
}

.cursor {
  cursor: pointer;
}

.signup_title {
  grid-column: content;
  font-size: x-large;
}

.input_error {
  border: 1px solid #ff0000;
  background-color: #ffeeee;
}

select {
  border: 0;
  border-radius: 0;
}

.errors {
  display: grid;
}

.help_msgs {
  margin-top: 5px;
  font-style: italic;
  font-size: larger;
}

.welcome_msg {
  grid-column: content;
  display: grid;
  margin-bottom: 10px;
  font-size: larger;
}

.welcome_msg > .headline {
  padding-bottom: 15px;
}

.welcome-msg-text {
  display: grid;

  grid-column: 1;
  grid-row: 2;
}

#acknowledgements-and-about {
  padding-top: 2%;

  display: grid;

  grid-template-columns: 150px 15px;

  grid-column-gap: 2px;
}

@media only screen and (max-width: 768px) {
  .help_msgs,
  .button,
  .signup_submit,
  select,
  input {
    width: 100%;
  }

  #header {
    padding-left: 10px;
  }

  select {
    height: 50px;
  }

  #lower-menu {
    margin-top: 0;
    padding: 0;
  }

  .signup_title {
    font-family: 'Open Sans';
    font-size: 21px;
  }

  .headline {
    padding-top: 25px;
  }

  .welcome_msg > .headline {
    padding-bottom: 0;
  }

  .signup {
    margin-top: 15px;
  }

  .login,
  .signup,
  .login_box,
  .signup_box {
    display: flex;
    flex-direction: column;

    margin-left: 20px;
    margin-right: 20px;
  }

  .signup_submit {
    margin-top: 50px;
  }

  .signup_box > input,
  .login_box > input {
    height: 45px;
  }

  .filter {
    display: none;
  }

  .menu {
    display: flex;
    flex-wrap: wrap;

    align-items: center;
    justify-items: center;
  }
}

/* CSS fixes to deal with incorrect styles */
.signup_submit {
  width: 100%;
  padding: 15px 0;
}

